Banner para master
Inserido um banner 'em construção' na mascara de abertura para subir para a master

--- a/index.html
+++ b/index.html
@@ -271,193 +271,16 @@
 
 
         <div class="mascara">
-            <div class="field">
-                <label class="label is-small">Reclamante</label>
-                <div class="control has-icons-left has-icons-right">
-                    <input id="nome" class="input is-small" type="text" placeholder="Seu Nome Aqui">
-                    <span class="icon is-small is-left">
-                    <i class="fas fa-signature"></i>
-                </span>
-                </div>
-            </div>
+            <p class="title is-3 is-spaced">Opa !!!</p>
+            <p class="subtitle is-5">Não tem nada aqui ainda !!!</p>
+            <p class="subtitle is-5">Estamos em construção ...</p>
 
-            <div class="field">
-                <label class="label is-small">Designação OI</label>
-                <div class="control has-icons-left has-icons-right">
-                    <input id="nome" class="input is-small" type="text" placeholder="Seu Nome Aqui">
-                    <span class="icon is-small is-left">
-                    <i class="fas fa-signature"></i>
-                </span>
-                </div>
-            </div>
-
-            <!-- FALHA -->
-            <!-- select -->
-            <label class="label is-small">Falha</label>
-            <div class="field">
-                <div class="control">
-                    <div class="select is-small">
-                        <select id="falha">
-                            <option selected>Inopeante</option>
-                            <option>Intermitente</option>
-                            <option>Perda de Pacote</option>
-                            <option>Taxa de Erro / CRC</option>
-                            <option>Lentidão</option>
-                            <option>Outro</option>
-                        </select>
-                    </div>
-                </div>
-            </div>
-            <!-- select -->
-
-            <textarea class="textarea is-small" placeholder="Detalhes / Observações da Falha ..."></textarea>
-            <!-- FALHA -->
-
-
-            <!-- Radio -->
-            <label class="label is-small">Proativo ?</label>
-            <div class="control" style="padding-bottom: 3px;">
-                <label class="radio">
-                    <input type="radio" name="radioProativo" value="0">
-                    Sim
-                </label>
-
-                <label class="radio">
-                    <input type="radio" name="radioProativo" value="1">
-                    Não
-                </label>
-            </div>
-
-            <label class="label is-small">Reincidente ?</label>
-            <div class="control" style="padding-bottom: 3px;">
-                <label class="radio">
-                    <input type="radio" name="radioReincidente" value="0">
-                    Sim
-                </label>
-
-                <label class="radio">
-                    <input type="radio" name="radioReincidente" value="1">
-                    Não
-                </label>
-            </div>
-
-            <label class="label is-small">Tem energia no local ?</label>
-            <div class="control" style="padding-bottom: 3px;">
-                <label class="radio">
-                    <input type="radio" name="radioEletrica" value="0">
-                    Sim
-                </label>
-
-                <label class="radio">
-                    <input type="radio" name="radioEletrica" value="1">
-                    Não
-                </label>
-
-                <label class="radio">
-                    <input type="radio" name="radioEletrica" value="1">
-                    Sem Confirmação
-                </label>
-            </div>
-
-            <label class="label is-small">Possui Backup Ativo ?</label>
-            <div class="control" style="padding-bottom: 3px;">
-                <label class="radio">
-                    <input type="radio" name="radioBackup" value="0">
-                    Sim
-                </label>
-
-                <label class="radio">
-                    <input type="radio" name="radioBackup" value="1">
-                    Não
-                </label>
-
-                <label class="radio">
-                    <input type="radio" name="radioBackup" value="1">
-                    Sem Confirmação
-                </label>
-            </div>
-
-            <label class="label is-small">Vai Ficar Pendente TS ?</label>
-            <div class="control" style="padding-bottom: 3px;">
-                <label class="radio">
-                    <input type="radio" name="radioPendenteTS" value="0">
-                    Sim
-                </label>
-
-                <label class="radio">
-                    <input type="radio" name="radioPendenteTS" value="1">
-                    Não
-                </label>
-            </div>
-            <!-- Radio -->
-
-            <label class="label is-small">Horário de Acesso</label>
-            <textarea class="textarea is-small" rows="1" style="white-space: nowrap;"></textarea>
-
-            <label class="label is-small">Diagnostico de Rede</label>
-            <textarea class="textarea is-small" placeholder="Teste / Log's / Diagnosticos ..." rows="15" style="white-space: nowrap;"></textarea>
-
-            <!-- select -->
-            <label class="label is-small">Telefone p/ Teste</label>
-            <div class="field">
-                <div class="control">
-                    <div class="select is-small">
-                        <select id="falha">
-                            <option value="Inoperante" selected>Opc I</option>
-                            <option value="BaixoDesempenho">Opc II</option>
-                        </select>
-                    </div>
-                </div>
-            </div>
-            <!-- select -->
-
-            <textarea class="textarea is-small" placeholder="Informações Adicionais ..." rows="10"></textarea>
-
-
-
-            <div class="field">
-                <label class="label is-small">Operadora (OEMP)</label>
-                <div class="control has-icons-left has-icons-right">
-                    <input id="nome" class="input is-small" type="text" placeholder="Seu Nome Aqui">
-                    <span class="icon is-small is-left">
-                    <i class="fas fa-signature"></i>
-                </span>
-                </div>
-            </div>
-            <div class="field">
-                <label class="label is-small">Designação (OEMP)</label>
-                <div class="control has-icons-left has-icons-right">
-                    <input id="nome" class="input is-small" type="text" placeholder="Seu Nome Aqui">
-                    <span class="icon is-small is-left">
-                    <i class="fas fa-signature"></i>
-                </span>
-                </div>
-            </div>
-            <!-- select -->
-            <label class="label is-small">Encerramento</label>
-            <div class="field">
-                <div class="control">
-                    <div class="select is-small">
-                        <select id="falha">
-                            <option value="Inoperante" selected>CGS</option>
-                            <option value="BaixoDesempenho">Sicredi</option>
-                        </select>
-                    </div>
-                </div>
-            </div>
-            <!-- select -->
-
-            <div class="field">
-                <label class="label is-small">Chamdo do Cliente</label>
-                <div class="control has-icons-left has-icons-right">
-                    <input id="nome" class="input is-small" type="text" placeholder="Seu Nome Aqui">
-                    <span class="icon is-small is-left">
-                    <i class="fas fa-signature"></i>
-                </span>
-                </div>
-            </div>
+            <figure class="image is-128x128">
+                <img src="https://lh3.googleusercontent.com/proxy/neN_CRCtaGdWFIn5DVRiKXGLTpZfKSago0AmCfBQRBWwRhJfsjK-HetN02xNzwxfto5kwZd9L7Ieto4vNK6vtuhcxHvLPvw">
+            </figure>
 
         </div>
+
     </div>
 
     <footer class="footer">
