Corrigindo clipboard no email
Buttons da guia email não estavão copiando para a area de transferencia.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Apps OI</title>
 </head>
 
-<body onload="email()">
+<body onload="encerramento()">
 
     <!-- nav -->
     <div class="tabs is-centered">
