--- a/index.html
+++ b/index.html
@@ -327,9 +327,9 @@
 
                         <!-- checkbox -->
                         <label class="checkbox" style="padding-top: 10px;">
-                    <input id="checkboxCausaCliente" value="cliente" type="checkbox">
-                    Causa Cliente ?
-                </label>
+                            <input id="checkboxCausaCliente" value="cliente" type="checkbox">
+                            Causa Cliente ?
+                        </label>
                         <!-- /checkbox -->
                         <!-- buttons outra causa -->
                         <!-- linha -->
@@ -341,36 +341,42 @@
                     <div class="container is-width-400px">
 
                         <label class="checkbox" style="margin-top: 10px; margin-bottom: 20px;">
-                    <input id="checkboxAguardandoValidacao" value="agudandoValidacao" type="checkbox">
-                    Aguardando Validação ?
-                </label>
+                            <input id="checkboxAguardandoValidacao" value="agudandoValidacao" type="checkbox">
+                            Aguardando Validação ?
+                        </label>
 
                         <div class="control">
                             <label class="radio">
-                    <input type="radio" name="radioPendenteCliente" value="0" checked>
-                    Pendente validar com CPD amanhã 
-                </label>
+                                <input type="radio" name="radioPendenteCliente" value="0" checked>
+                                Pendente validar com CPD amanhã 
+                            </label>
                             <br>
                             <label class="radio">
-                    <input type="radio" name="radioPendenteCliente" value="1">
-                    Pendente validar com Residente amanhã
-                </label>
+                                <input type="radio" name="radioPendenteCliente" value="1">
+                                Pendente validar com Residente amanhã
+                            </label>
                             <br>
                             <label class="radio">
-                    <input type="radio" name="radioPendenteCliente" value="2">
-                    Solicitado validação ao CPD
-                </label>
+                                <input type="radio" name="radioPendenteCliente" value="2">
+                                Solicitado validação ao CPD
+                            </label>
                             <br>
                             <label class="radio">
-                    <input type="radio" name="radioPendenteCliente" value="3">
-                    Monitoração por 24 h
-                </label>
+                                <input type="radio" name="radioPendenteCliente" value="3">
+                                Monitoração por 24 h
+                            </label>
                             <!-- <br>
-                <label class="radio">
-                    <input type="radio" name="radioPendenteCliente" value="4">
-                    Aguardando Diagnostico
-                </label> -->
+                            <label class="radio">
+                                <input type="radio" name="radioPendenteCliente" value="4">
+                                Aguardando Diagnostico
+                            </label> -->
                         </div>
+
+                        <br>
+
+                        <a href="https://gabbamendonca.github.io/apps-oi/encerramento">
+                            <button class="button is-link is-light">Códigos de Encerramento R2</button>
+                        </a>
 
                     </div>
                     <!-- /BLOCO DIREITO -->
