Add opcs pendente validaçao
Add opcoes :
Pendente Diagnostico
Pendente Baixa do Post

Close #9
Close #7

--- a/index.html
+++ b/index.html
@@ -365,11 +365,16 @@
                                 <input type="radio" name="radioPendenteCliente" value="3">
                                 Monitoração por 24 h
                             </label>
-                            <!-- <br>
+                            <br>
+                            <label class="radio">
+                                <input type="radio" name="radioPendenteCliente" value="5">
+                                Pendente Baixa do Posto
+                            </label> 
+                            <br>
                             <label class="radio">
                                 <input type="radio" name="radioPendenteCliente" value="4">
-                                Aguardando Diagnostico
-                            </label> -->
+                                Pendente Diagnostico
+                            </label> 
                         </div>
 
                         <br>
